--- a/mix-master.sass
+++ b/mix-master.sass
@@ -1,3 +1,8 @@
+=animation($value)
+  -moz-animation: $value
+  -webkit-animation: $value
+  animation: $value
+
 =bg_gradient($color1, $color2, $pos1: left top, $pos2: left bottom, $type: linear, $extra: "")
   background: -moz-linear-gradient(top, $color1, $color2) #{$extra}
   background: -webkit-gradient($type, $pos1, $pos2, from($color1), to($color2)) #{$extra}
