--- a/mix-master.sass
+++ b/mix-master.sass
@@ -56,6 +56,12 @@
   opacity: $opacity
   filter: alpha(opacity = $opacity * 100)
 
+=select($value)
+  -moz-user-select: $value
+  -o-user-select: $value
+  -webkit-user-select: $value
+  user-select: $value
+
 =selection($background, $color: "", $nested: 0)
   @if $nested == 0
     ::-moz-selection
