updated +select mixin

--- a/mix-master.sass
+++ b/mix-master.sass
@@ -66,9 +66,11 @@
   filter: alpha(opacity = $opacity * 100)
 
 =select($value)
-  -moz-user-select: $value
-  -o-user-select: $value
+  -webkit-touch-callout: $value
   -webkit-user-select: $value
+  -khtml-user-select: $value
+  -moz-user-select: $value
+  -ms-user-select: $value
   user-select: $value
 
 =selection($background, $color: "", $nested: 0)
