added a cursor_grab mixin for use with draggable elements

--- a/mix-master.sass
+++ b/mix-master.sass
@@ -65,6 +65,12 @@
   -webkit-box-sizing: $value
   box-sizing: $value
 
+=cursor_grab
+  cursor: all-scroll
+  cursor: -moz-grab
+  cursor: -webkit-grab
+  cursor: grab
+
 =opacity($opacity)
   -moz-opacity: $opacity
   -webkit-opacity: $opacity
