added column count and gap

--- a/mix-master.sass
+++ b/mix-master.sass
@@ -65,6 +65,16 @@
   -webkit-box-sizing: $value
   box-sizing: $value
 
+=column_count($value)
+  -moz-column-count: $value
+  -webkit-column-count: $value
+  column-count: $value
+
+=column_gap($value)
+  -moz-column-gap: $value
+  -webkit-column-gap: $value
+  column-gap: $value
+
 =cursor_grab
   cursor: all-scroll
   cursor: -moz-grab
