added column rule

--- a/mix-master.sass
+++ b/mix-master.sass
@@ -75,6 +75,11 @@
   -webkit-column-gap: $value
   column-gap: $value
 
+=column_rule($value)
+  -moz-column-rule: $value
+  -webkit-column-rule: $value
+  column-rule: $value
+
 =cursor_grab
   cursor: all-scroll
   cursor: -moz-grab
