added column span and width

--- a/mix-master.sass
+++ b/mix-master.sass
@@ -75,6 +75,16 @@
   -webkit-column-gap: $value
   column-gap: $value
 
+=column_span($value)
+  -moz-column-span: $value
+  -webkit-column-span: $value
+  column-span: $value
+
+=column_width($value)
+  -moz-column-width: $value
+  -webkit-column-width: $value
+  column-width: $value
+
 =column_rule($value)
   -moz-column-rule: $value
   -webkit-column-rule: $value
