--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -102,6 +102,26 @@
   opacity: $opacity
   filter: alpha(opacity = $opacity * 100)
 
+=placeholder_color($color: "", $nested: 0)
+  @if $nested == 0
+    ::-webkit-input-placeholder
+      color: $color
+    :-moz-placeholder
+      color: $color
+    ::-moz-placeholder
+      color: $color
+    :-ms-input-placeholder
+      color: $color
+  @else
+    &::-webkit-input-placeholder
+      color: $color
+    &:-moz-placeholder
+      color: $color
+    &::-moz-placeholder
+      color: $color
+    &:-ms-input-placeholder
+      color: $color
+
 =select($value)
   -webkit-touch-callout: $value
   -webkit-user-select: $value
