Fixed bug with placeholder_color not parsing when unnested.

--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -106,11 +106,11 @@
   @if $nested == 0
     ::-webkit-input-placeholder
       color: $color
-    :-moz-placeholder
+    \:-moz-placeholder
       color: $color
     ::-moz-placeholder
       color: $color
-    :-ms-input-placeholder
+    \:-ms-input-placeholder
       color: $color
   @else
     &::-webkit-input-placeholder
