--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -70,6 +70,11 @@
   -webkit-column-count: $value
   column-count: $value
 
+=column_fill($value)
+  -moz-column-fill: $value
+  -webkit-column-fill: $value
+  column-fill: $value
+
 =column_gap($value)
   -moz-column-gap: $value
   -webkit-column-gap: $value
