--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -3,6 +3,11 @@
   -webkit-animation: $value
   animation: $value
 
+=background_size($value)
+  -moz-background-size: $value
+  -webkit-background-size: $value
+  background-size: $value
+
 =bg_gradient($color1, $color2, $pos1: left top, $pos2: left bottom, $type: linear, $extra: "")
   background: -moz-linear-gradient(top, $color1, $color2) #{$extra}
   background: -webkit-gradient($type, $pos1, $pos2, from($color1), to($color2)) #{$extra}
