Renamed bg_size for consistency

--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -3,7 +3,7 @@
   -webkit-animation: $value
   animation: $value
 
-=background_size($value)
+=bg_size($value)
   -moz-background-size: $value
   -webkit-background-size: $value
   background-size: $value
