--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -212,7 +212,7 @@
     -webkit-transition: $t1
     transition: $t1
 
-// Copyright (c) 2012 Douglas Waltman II http://dougwaltman.com
+// Copyright (c) 2012-2013 Douglas Waltman II http://dougwaltman.com
 // 
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
