--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -70,6 +70,13 @@
   -webkit-box-sizing: $value
   box-sizing: $value
 
+=clear_fix
+  clear: both
+  content: '.'
+  display: block
+  height: 0
+  visibility: hidden
+
 =column_count($value)
   -moz-column-count: $value
   -webkit-column-count: $value
