--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -71,11 +71,12 @@
   box-sizing: $value
 
 =clear_fix
-  clear: both
-  content: '.'
-  display: block
-  height: 0
-  visibility: hidden
+  &:after
+    clear: both
+    content: '.'
+    display: block
+    height: 0
+    visibility: hidden
 
 =column_count($value)
   -moz-column-count: $value
