Added filter mixin.

--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -114,6 +114,13 @@
   cursor: -webkit-grab
   cursor: grab
 
+=filter($value)
+  -moz-filter: $value
+  -ms-filter: $value
+  -o-filter: $value
+  -webkit-filter: $value
+  filter: $value
+
 =opacity($opacity)
   -moz-opacity: $opacity
   -webkit-opacity: $opacity
