Added filter stylus mixin

--- a/_mix-master.styl
+++ b/_mix-master.styl
@@ -93,6 +93,13 @@ cursor_grab
     cursor: -webkit-grab
     cursor: grab
 
+filter()
+  -moz-filter: arguments
+  -ms-filter: arguments
+  -o-filter: arguments
+  -webkit-filter: arguments
+  filter: arguments
+
 opacity(o)
     -khtml-opacity: o
     -moz-opacity: o
