Fixed clear_fix and added it to stylus

--- a/_mix-master.styl
+++ b/_mix-master.styl
@@ -57,6 +57,13 @@ box_sizing()
     -webkit-box-sizing: arguments
     box-sizing: arguments
 
+clear_fix()
+    clear: both
+    content: '.'
+    display: block
+    height: 0
+    visibility: hidden
+
 column_count()
     -moz-column-count: arguments
     -webkit-column-count: arguments
