Fixed missing parenthesis on cursor_grab for stylus

--- a/_mix-master.styl
+++ b/_mix-master.styl
@@ -94,7 +94,7 @@ column_rule()
     -webkit-column-rule: arguments
     column-rule: arguments
 
-cursor_grab
+cursor_grab()
     cursor: all-scroll
     cursor: -moz-grab
     cursor: -webkit-grab
