Fixed bug carried over from Sass mixin to Stylus version for placeholder_color

--- a/_mix-master.styl
+++ b/_mix-master.styl
@@ -128,11 +128,11 @@ placeholder_color(color, nested=true)
     else
         ::-webkit-input-placeholder
             color: color
-        #{':'}-moz-placeholder
+        :-moz-placeholder
             color: color
         ::-moz-placeholder
             color: color
-        #{':'}-ms-input-placeholder
+        :-ms-input-placeholder
             color: color
 
 select()
