Added a grayscale mixin

--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -120,6 +120,11 @@
   -webkit-filter: $value
   filter: $value
 
+=grayscale
+  -webkit-filter: grayscale(1)
+  filter: url(filters.svg#grayscale)
+  filter: gray
+
 =opacity($opacity)
   -moz-opacity: $opacity
   -webkit-opacity: $opacity
