--- a/_mix-master.styl
+++ b/_mix-master.styl
@@ -107,6 +107,11 @@ filter()
   -webkit-filter: arguments
   filter: arguments
 
+grayscale()
+  -webkit-filter: grayscale(1)
+  filter: url(filters.svg#grayscale)
+  filter: gray
+
 opacity(o)
     -khtml-opacity: o
     -moz-opacity: o
