Added image_optimize mixin

--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -125,6 +125,10 @@
   filter: url(filters.svg#grayscale)
   filter: gray
 
+=image_optimize
+  image-rendering: -webkit-optimize-contrast
+  image-rendering: optimizeQuality
+
 =opacity($opacity)
   -moz-opacity: $opacity
   -webkit-opacity: $opacity
