Added missing sass mixin 'filter'

--- a/_mix-master.sass
+++ b/_mix-master.sass
@@ -119,6 +119,13 @@
     cursor: -webkit-grabbing
     cursor: grabbing
 
+=filter($value)
+    -moz-filter: $value
+    -ms-filter: $value
+    -o-filter: $value
+    -webkit-filter: $value
+    filter: $value
+
 =grayscale
     -webkit-filter: grayscale(1)
     filter: url(filters.svg#grayscale)
